--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@react-oauth/google": "^0.12.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.18",
